[gd_scene load_steps=14 format=3 uid="uid://chncopaqrtb1x"]

[ext_resource type="Texture2D" uid="uid://c0hynwn7hmaac" path="res://art/level2/secretbox.png" id="1_7u7e0"]
[ext_resource type="Script" path="res://levels/Level2/secretpuzzle/secret.gd" id="1_bk527"]
[ext_resource type="FontFile" uid="uid://lyy4kqfwawyb" path="res://dialogues/rainyhearts.ttf" id="2_3btli"]
[ext_resource type="Texture2D" uid="uid://bwkhtoebgi433" path="res://art/level2/buttonnormal.png" id="3_o0tgm"]
[ext_resource type="Texture2D" uid="uid://cmwepmp5p0yad" path="res://art/level2/buttonhover.png" id="4_oqlh3"]
[ext_resource type="AudioStream" uid="uid://b0xjtmg71ayds" path="res://sounds/button_pressed.mp3" id="6_1fn0p"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3l60j"]
texture = ExtResource("3_o0tgm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8jvhg"]
texture = ExtResource("4_oqlh3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5rqpe"]
texture = ExtResource("4_oqlh3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_go2g8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohfwb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1j1hm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylnef"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Secret" type="CanvasLayer"]
script = ExtResource("1_bk527")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -75.0
offset_right = 101.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7u7e0")
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="purpleplus" type="Button" parent="Control"]
layout_mode = 0
offset_left = 195.0
offset_top = 47.0
offset_right = 220.0
offset_bottom = 72.0
theme_override_styles/normal = SubResource("StyleBoxTexture_3l60j")
theme_override_styles/hover = SubResource("StyleBoxTexture_8jvhg")

[node name="purpleminus" type="Button" parent="Control"]
layout_mode = 0
offset_left = 220.0
offset_top = 145.0
offset_right = 245.0
offset_bottom = 170.0
rotation = 3.14159
theme_override_styles/normal = SubResource("StyleBoxTexture_3l60j")
theme_override_styles/hover = SubResource("StyleBoxTexture_5rqpe")
action_mode = 0

[node name="blueplus" type="Button" parent="Control"]
layout_mode = 0
offset_left = 147.0
offset_top = 47.0
offset_right = 172.0
offset_bottom = 72.0
theme_override_styles/normal = SubResource("StyleBoxTexture_3l60j")
theme_override_styles/hover = SubResource("StyleBoxTexture_8jvhg")

[node name="blueminus" type="Button" parent="Control"]
layout_mode = 0
offset_left = 172.0
offset_top = 145.0
offset_right = 197.0
offset_bottom = 170.0
rotation = 3.14159
theme_override_styles/normal = SubResource("StyleBoxTexture_3l60j")
theme_override_styles/hover = SubResource("StyleBoxTexture_5rqpe")
action_mode = 0

[node name="greenplus" type="Button" parent="Control"]
layout_mode = 0
offset_left = 98.0
offset_top = 47.0
offset_right = 123.0
offset_bottom = 72.0
theme_override_styles/normal = SubResource("StyleBoxTexture_3l60j")
theme_override_styles/hover = SubResource("StyleBoxTexture_8jvhg")

[node name="greenminus" type="Button" parent="Control"]
layout_mode = 0
offset_left = 123.0
offset_top = 145.0
offset_right = 148.0
offset_bottom = 170.0
rotation = 3.14159
theme_override_styles/normal = SubResource("StyleBoxTexture_3l60j")
theme_override_styles/hover = SubResource("StyleBoxTexture_5rqpe")
action_mode = 0

[node name="purpletext" type="Label" parent="Control"]
layout_direction = 2
layout_mode = 0
offset_left = 191.0
offset_top = 73.0
offset_right = 224.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(0.777458, 0.481034, 0.956408, 1)
theme_override_fonts/font = ExtResource("2_3btli")
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bluetext" type="Label" parent="Control"]
layout_direction = 2
layout_mode = 0
offset_left = 143.0
offset_top = 73.0
offset_right = 176.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(0.344474, 0.871204, 0.867262, 1)
theme_override_fonts/font = ExtResource("2_3btli")
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="greentext" type="Label" parent="Control"]
layout_direction = 2
layout_mode = 0
offset_left = 94.0
offset_top = 73.0
offset_right = 127.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(0.547149, 0.829727, 0.448555, 1)
theme_override_fonts/font = ExtResource("2_3btli")
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hide" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 0.887
offset_left = 42.0
offset_top = 120.0
offset_right = 56.0
offset_bottom = 135.52
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_go2g8")
theme_override_styles/hover = SubResource("StyleBoxFlat_ohfwb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1j1hm")
theme_override_styles/focus = SubResource("StyleBoxFlat_ylnef")
action_mode = 0
text = "x"

[node name="button_pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1fn0p")

[connection signal="pressed" from="Control/purpleplus" to="." method="_on_purpleplus_pressed"]
[connection signal="pressed" from="Control/purpleminus" to="." method="_on_purpleminus_pressed"]
[connection signal="pressed" from="Control/blueplus" to="." method="_on_blueplus_pressed"]
[connection signal="pressed" from="Control/blueminus" to="." method="_on_blueminus_pressed"]
[connection signal="pressed" from="Control/greenplus" to="." method="_on_greenplus_pressed"]
[connection signal="pressed" from="Control/greenminus" to="." method="_on_greenminus_pressed"]
[connection signal="pressed" from="Control/hide" to="." method="_on_hide_pressed"]
